# OptimDGFiP

./: .gitignore  LINKS.yaml  README.md  URLS.yaml  datalinks.txt  download.py  pyproject.toml  requirements.txt
dgfip/: communes.py  constants.py  distance.py  download.py  influence.py  iris.py  isochrones.py  optimloc.py  paths.py  qpv.py  read.py  structures.py
doc/: dgfip.html  index.html  search.js
doc/dgfip/: distance.html  download.html  influence.html  optimloc.html  paths.html  read.html
notebooks/: departements.ipynb  explo.ipynb  explo_services_demarches.ipynb  explo_structures.ipynb  isochrones.ipynb  plus_proche.ipynb  plus_proche_communes.ipynb  plus_proche_iris.ipynb  professionnels.ipynb  qpv.ipynb  revenus.ipynb  services_demarches.ipynb  zones_influence.ipynb
tests/: test_dgfip.py
