[tool.poetry]
name = "dgfip"
version = "0.1.0"
description = "Code du Hackathon DFGIP 2022"
authors = ["Titouan Morvan <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
routingpy = "^0.4.0"
geopandas = "^0.10.2"
matplotlib = "^3.5.1"
Shapely = "^1.8.1"
Rtree = "^1.0.0"
scikit-learn = "^1.0.2"
mapclassify = "^2.4.3"
libpysal = "^4.6.2"
pygeos = "^0.12.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
notebook = "^6.4.11"
seaborn = "^0.11.2"
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.950"
pylint = "^2.13.8"
isort = "^5.10.1"
pdoc = "^11.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
